Fixing: aligning

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -22,28 +22,29 @@ section
     justify-content: center
     align-items: center
     height: 100vh
+    padding: 94px 0
 
 #card
-    display: flex
-    justify-content: center
-    
     background: $white
     border-radius: 16px
     width: 320px
     height: $card-height
+    margin-top: 18px
 
 #qr
     margin: 16px 16px
     width: $card-width - 32px
     height: $card-width - 32px
     border-radius: 10px
+
 img
     width: 100%
     border-radius: 10px
+
 .caption
     color: $dark-blue
     margin: auto        
-    margin-top: 30px
+    margin-top: 22px
     width: 250px
     height: 50px
     font-family: Outfit
@@ -51,7 +52,6 @@ img
     font-size: 16.9pt
     text-align: center
     line-height: 1.2
-
 
 .sub-caption
     background: $white
